[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=1]


[node name="Camera2D" type="Camera2D"]
position = Vector2( 160, 90 )
current = true
smoothing_enabled = true
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Add Camera to World / Level scene and then "
}

[node name="CameraLimits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="CameraLimits"]

[node name="BottomRight" type="Position2D" parent="CameraLimits"]
position = Vector2( 320, 180 )
